updated Slovak translation

--- a/po/wesnoth-aoi/sk.po
+++ b/po/wesnoth-aoi/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2009-12-19 12:30+0100\n"
+"PO-Revision-Date: 2012-08-15 20:34+0100\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -86,7 +86,7 @@ msgstr "Vylepšenia príbehu a hrateľnosti po verzii 1.4"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Kresby a grafický dizajn"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -339,9 +339,8 @@ msgstr "Šľachtic"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
-msgstr "Pripravme sa, najvyšší čas ich vyhnať odtiaľto!"
+msgstr "Prevezmi... velenie... Vyžeň ich... odtiaľto."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:220
@@ -354,14 +353,14 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
 "may he wipe your people from the face of this earth!"
 msgstr ""
-"Buď prekliaty, ty milenec stromov! Budeš trpieť... Môj pán Rualša sa blíži. "
-"Zmietne tvoj ľud z povrchu tejto zeme!"
+"Som porazený, ale tento boj nebol férový... Buď prekliaty, ty zbabelec! "
+"Budeš trpieť... a keď ťa môj pán Rualša nájde, zmietne tvoj ľud z povrchu "
+"tejto zeme!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:243
@@ -443,23 +442,19 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
 msgstr ""
-"Keď skončí tento boj, tak sa k niekoľkým odpovediam dostaneme. No pre "
-"teraz..."
+"Keď skončí tento boj, tak sa k niekoľkým odpovediam dostaneme. No ale teraz —"
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
-msgstr "Garlša vidí elfov... áno... čerstvé mäso pre našich vlkov, áno, áno..."
+msgstr "Garlša vidí elfov... áno... čerstvé mäso pre našich vlkov. Áno, áno..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
-msgstr "... sústreďme sa na úlohu, ktorá je priamo pred nami."
+msgstr "— sústreďme sa na úlohu, ktorá je priamo pred nami."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:150
@@ -473,35 +468,31 @@ msgstr "Zjavenia môžu byť na oklamanie. Povedz mužom, nech sú ostražití."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
 msgstr "Áno... áno... zabite ich, moji vrahovia!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
-msgstr "Auuuu! Skla... sklamal som... Rualša... hnev..."
+msgstr "Auuuu! Skla... sklamal som... Rualša sa bude hnevať..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
 msgstr ""
-"Nech je Rualša ktokoľvek, nie je tu aby ju vykonal, úbožiak. Možno ho ale "
-"nájdeme ďalej na severe."
+"Zase... ten ‘Rualša‘. Musíme ísť ďalej, tu nie sú odpovede, ktoré hľadáme. "
+"Možno ich ale nájdeme ďalej na severe."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
-#, fuzzy
 msgid ""
 "Destroy this place and let the forest take the ruins. We don’t want any more "
 "undesirables to use it."
 msgstr ""
-"Zničme toto miesto a dovoľme lesu zabrať tie ruiny. Nechceme aby nikdy nikto "
-"nepoužíval toto opevnenie."
+"Zničme toto miesto a dovoľme lesu zabrať tie ruiny. Nechceme aby niekedy "
+"niekto používal toto opevnenie."
 
 #. [scenario]: id=03_Wasteland
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:9
@@ -539,7 +530,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -548,9 +538,10 @@ msgid ""
 "for comfort. The great question remained — would he find Rualsha?"
 msgstr ""
 "Erlornas si bol takmer istý, že nájde orkov na tomto mieste. Žiadny kmeň "
-"trpaslíkov by sa neodvážil vniknúť na ich územie. Ľudia by tu nemali čo "
-"hľadať a určite by sa nesprávali k lesu práve takto. Otázka však ostáva - "
-"kde nájdeme Rualšu?"
+"trpaslíkov by neporušil dávne zmluvy s elfmi takýmto spôsobom. Ani ľudia "
+"nikdy neboli tak... systematickí v ich ničení a neputovali by v dostatočných "
+"počtoch do severnej krajiny, ktorá je pre nich príliš studená a vlhká. "
+"Otázka však ostáva — nájde Rualšu?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -630,25 +621,23 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
-msgstr "Vyhral si... elf... no to nič nemení... vôbec nič!"
+msgstr ""
+"Vyhral si... elf... no to nič nemení... vôbec nič... (<i>odkašľanie</i>)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"Našli sme cestu... teraz... príde nás veľa, veľmi veľa... ani si nevieš "
-"predstaviť koľko..."
+"Našli sme cestu... teraz... príde nás veľa, veľmi veľa... (<i>odkašľanie</i>)"
+"ani si nevieš predstaviť koľko..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr "Počkám si... spolu s mŕtvymi..."
+msgstr "(<i>Odkašľanie</i>) Počkám si... spolu s mŕtvymi..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -1122,7 +1111,6 @@ msgstr "Podaj hlásenie."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
@@ -1177,17 +1165,16 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
-msgstr "Zaujímavé... choď po moje víno a zober niekoľko pohárov."
+msgstr ""
+"Zaujímavé... Choď do môjho skladu a prines mi fľašu vína. A niekoľko pohárov."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
-msgstr "Pohárov?"
+msgstr "... Pohárov?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1223,13 +1210,12 @@ msgstr "O nejaký čas neskôr..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
 msgstr ""
 "Takže ste sa rozhodli prijať pozvanie? Dobre, veľmi dobre. Vitajte, som lord "
-"Erlornas z wesmérskeho lesa. "
+"Erlornas z Wesmérskeho lesa. Vašu prítomnosť tu považujem za... prekvapujúcu."
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:244
@@ -1281,18 +1267,17 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Erlornas, zlyhal som..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
 "here?"
 msgstr ""
 "Tak to všetko dobre skončilo. Na druhú stranu, Linaera, je tu niečo ďalšie "
-"čo ma trápi. Si mágyňa, necítiš niečo... zlé... na východ odtiaľto?"
+"čo ma trápi. Si mágyňa. Necítiš niečo... zlé... na východ odtiaľto?"
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:310
@@ -1408,15 +1393,14 @@ msgstr "Porazíš Rualšu"
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:222
-#, fuzzy
 msgid ""
 "My lord! We have ridden hard for over a week to catch up with you! The "
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
 "can muster a full invasion force."
 msgstr ""
 "Môj pane! Hnali sme sa vytrvalo vyše týždňa aby sme ťa dostihli! Rada "
-"rozhodla, a žiada ťa, aby si porazil Rualšu čo najrýchlejšie, predtým ako "
-"stihne zhromaždiť celú svoju armádu. "
+"rozhodla a žiada ťa, aby si porazil Rualšu čo najrýchlejšie, predtým ako "
+"stihne zhromaždiť armádu na inváziu."
 
 #. [message]: speaker=Rualsha
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:226
@@ -1466,181 +1450,3 @@ msgid ""
 msgstr ""
 "Obávam sa, že to tak bude. Tu sme si vybojovali prvé víťazstvo, ale temné "
 "časy sa blížia."
-
-# { CS }
-# Vyprší počet kol
-#~ msgid "Time runs out"
-#~ msgstr "Vyprší čas"
-
-#~ msgid ""
-#~ "My lord Erlornas! A party of orcs has encamped to the north. That is the "
-#~ "stench of their burnings drifting on the wind!"
-#~ msgstr ""
-#~ "Môj pane Erlornas! Na severe sa utáborila skupina orkov. Vo vetre je "
-#~ "zápach toho, ako ničia les!"
-
-#~ msgid ""
-#~ "What blasphemy is this? I have heard it said that Orcs are despoilers, "
-#~ "tree-killers...but I did not believe any could be so wantonly filthy as "
-#~ "the reports made them."
-#~ msgstr ""
-#~ "Čo za rúhanie to má byť? Počul som, že Orkovia sú zlodeji a vrahovia "
-#~ "stromov...ale neveril som že by mohli byť až takí bezohľadní a skazení, "
-#~ "ako tvrdili správy."
-
-#~ msgid ""
-#~ "We see the truth of it here, my lord. They make great fires, not of "
-#~ "deadfall wood but of the new-murdered corpses of the singing trees. They "
-#~ "trample the greensward into mud and do not even bury their foul dung."
-#~ msgstr ""
-#~ "Teraz na vlastné oči vidíme, že je to pravda, môj pane. Zakladajú "
-#~ "obrovské požiare, nie preto, aby zničili les, ale kvôli novým mŕtvolám "
-#~ "zavraždených spievajúcich stromov. Zošľapávajú trávu na blato a ani "
-#~ "nezakopávajú svoje smradľavé výkaly."
-
-#~ msgid ""
-#~ "They are a blight on our forests, and must not be permitted into Wesmere. "
-#~ "I shall arm the folk; we should be able to drive them off. All the same, "
-#~ "you had best ride for reinforcements, Lomarfel."
-#~ msgstr ""
-#~ "Ničia naše lesy - nesmú sa dostať do Vesméru. Ozbrojím ľud; mali by sme "
-#~ "byť schopní odohnať ich preč. Ale aj tak bude najlepšie, aby si sa vydal "
-#~ "po posily, Lomarfel."
-
-#~ msgid ""
-#~ "Hmmm... Who is this Rualsha, I wonder? I will have to take a scouting "
-#~ "party north to see what is afoot there..."
-#~ msgstr ""
-#~ "Hmmm... Zaujímalo by ma, kto je Rualša? Budem musieť podniknúť prieskumnú "
-#~ "výpravu na sever, aby som zistil, čo sa tam deje..."
-
-#~ msgid ""
-#~ "There is some sort of keep ahead, here where we thought no people with "
-#~ "the wit to raise such a pile dwelt."
-#~ msgstr ""
-#~ "Pred nami je nejaké opevnenie. Tu, kde by sme si nikdy nepomysleli že sa "
-#~ "tu nájdu ľudia s aspoň trochou rozumu."
-
-#~ msgid "Be careful...he may be more dangerous than he appears."
-#~ msgstr "Buď opatrný... môže byť nebezpečnejší ako vyzerá."
-
-#~ msgid "Aiieeee!  I die, but Rualsha's vengeance shall fall upon you!"
-#~ msgstr "Aagrrrr! Zomieram, ale Rualšova pomsta vás nakoniec dostihne!"
-
-#~ msgid ""
-#~ "The orcish trail stood out less against the desolation, but the craft of "
-#~ "elvish trackers was more than equal to following.  They pursued with "
-#~ "grimmer purpose now."
-#~ msgstr ""
-#~ "Stopa orkov vyčnievala menej v spustošenej krajine, ale schopnosti "
-#~ "elfských stopárov boli viac ako postačujúce k jej sledovaniu. Postupovali "
-#~ "ďalej s väčším hnevom."
-
-#~ msgid ""
-#~ "The foul orcs have devastated this area, destroying the trees and "
-#~ "slaughtering the animals for sport... it saddens me to see such waste."
-#~ msgstr ""
-#~ "Smradľavý orkovia zdevastovali túto oblasť, zničili stromy a povraždili "
-#~ "zvieratá len pre zábavu... pohľad na túto pohromu ma zarmucuje."
-
-#~ msgid ""
-#~ "Greetings, Erlornas! I am Gnargha, the brother of Urugha whom you slew "
-#~ "but few nights ago. Know this: Lord Rualsha has permitted me to be the "
-#~ "agent of his revenge!"
-#~ msgstr ""
-#~ "Zdravím ťa, Erlornas! Som Gnarga, brat Urgu, ktorého si zabil len pred "
-#~ "pár dňami. Počúvaj: Pán Rualša mi dovolil byť poslom jeho pomsty!"
-
-#~ msgid ""
-#~ "I have no quarrel with you, Gnargha, nor with your leader Rualsha - but I "
-#~ "cannot permit you to invade our lands. Leave now, and we shall be at "
-#~ "peace."
-#~ msgstr ""
-#~ "Nebudem sa s tebou hádať, Gnarga, ani s tvojím vodcom Rualšom - ale "
-#~ "nemôžem ti dovoliť vtrhnúť do našej krajiny. Odíď a medzi nami bude mier."
-
-#~ msgid ""
-#~ "Peace?! Bah! You elves squat on land that could feed many orclings, and "
-#~ "you are even weaker than we guessed. And you, you killed my brother; "
-#~ "prepare yourself for a slow and painful death!"
-#~ msgstr ""
-#~ "Mier?! Pch! Vy elfovia obývate oblasti zeme, ktorá by mohla nakŕmiť veľa "
-#~ "orkov a ste ešte slabší ako sme si mysleli. A ty, ty si zabil môjho "
-#~ "brata; priprav sa na pomalú a bolestivú smrť!"
-
-#~ msgid ""
-#~ "Gnargha and his troops must have come down out of that valley to the "
-#~ "north... that is where we will go next!"
-#~ msgstr ""
-#~ "Gnarga a jeho jednotky museli prísť z toho údolia na severe... tam teraz "
-#~ "zamierime!"
-
-#~ msgid ""
-#~ "Hint:\n"
-#~ "Trolls are very dangerous if they can attack as a group. Use the cave-"
-#~ "mouths as bottlenecks to fight them one at a time."
-#~ msgstr ""
-#~ "Pomôcka:\n"
-#~ "Trolovia sú veľmi nebezpeční ak môžu útočiť v skupine. Použi ústie "
-#~ "jaskyní ako priechod, aby si s nimi mohol bojovať pojednom."
-
-#~ msgid "Ceoddyn"
-#~ msgstr "Ceodyn"
-
-#~ msgid "Midry"
-#~ msgstr "Midry"
-
-#~ msgid ""
-#~ "We are far from the lands granted to humans, my lord Erlornas! But there "
-#~ "is plainly one living in that tower to the west."
-#~ msgstr ""
-#~ "Sme ďaleko od zemí prepožičaných ľuďom, môj pane Erlornas! Ale v tej veži "
-#~ "na západe zrejme niekto žije."
-
-#~ msgid ""
-#~ "Some of our mages crave solitude for their studies. Humans are, perhaps, "
-#~ "likewise."
-#~ msgstr ""
-#~ "Niektorí naši mágovia sa pre ich štúdiá dožadovali samoty. Ľudia sú možno "
-#~ "rovnakí."
-
-#~ msgid ""
-#~ "Help! A great army of orcs has come down from the north, and has been "
-#~ "laying seige to my tower for weeks... we are nearly out of supplies. Our "
-#~ "people have always been friendly to the elves - will you not assist us?"
-#~ msgstr ""
-#~ "Pomoc! Obrovská armáda orkov prišla zo severu a oblieha moju vežu celé "
-#~ "týždne... dochádzajú nám zásoby. Naši ľudia boli k elfom vždy priateľskí "
-#~ "- nepomôžete nám?"
-
-#~ msgid ""
-#~ "Yes, of course! But... I wish to defeat the vile orcs and drive them away "
-#~ "from our borders. Will you join us in attacking them?"
-#~ msgstr ""
-#~ "Áno, samozrejme! Ale... chcel by som tých odporných orkov poraziť a "
-#~ "zahnať preč od našich hraníc. Pripojíte sa k nám pri útoku?"
-
-#~ msgid ""
-#~ "Nothing would please me better! I will place all my powers at your "
-#~ "command."
-#~ msgstr ""
-#~ "Nič by ma nepotešilo viac! Rozmiestnim všetky moje sily podľa tvojho "
-#~ "rozkazu."
-
-#~ msgid ""
-#~ "Oh, no! Without Linaera's help, I cannot hope to defeat such a great "
-#~ "force of orcs. I must return to Wesmere and bring reinforcements."
-#~ msgstr ""
-#~ "Och, nie! Bez Linaerinej pomoci nemôžem dúfať, že porazím také obrovské "
-#~ "vojsko orkov. Musím sa vrátiť do Wesméru a priviesť posily."
-
-#~ msgid ""
-#~ "Thank you, Linaera. I couldn't have defeated the orcs without your "
-#~ "help... How can I repay you?"
-#~ msgstr ""
-#~ "Ďakujem Linaera! Neporazil by som orkov bez tvojej pomoci... Ako sa ti "
-#~ "môžem odvďačiť?"
-
-#~ msgid ""
-#~ "Ah. I have felt this thing's taint in the earth. Very well... to the east!"
-#~ msgstr "Aha. V zemi som cítil stopu tejto veci. Takže... na východ!"
