--- a/po/wesnoth-did/sk.po
+++ b/po/wesnoth-did/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2010-03-27 23:16+0100\n"
+"PO-Revision-Date: 2012-08-15 20:55+0100\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -56,9 +56,8 @@ msgstr "Nekromant"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Stredná náročnosť, 11 scén.)"
+msgstr "(Stredná náročnosť, 12 scén.)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
@@ -154,7 +153,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:49
-#, fuzzy
 msgid ""
 "Shortly a man dressed in the robes of a necromancer emerged from the trees. "
 "<i>“Allow me to introduce myself. I am Darken Volk. While I know your "
@@ -163,16 +161,15 @@ msgid ""
 "misdoubt any of the border towns can stand without some assistance. For now, "
 "I ask only to rest in your town for a few days.”</i>"
 msgstr ""
-"Chvíľu potom vyšiel z lesa muž v rúchu černokňažníka. „Dovoľte mi aby som sa "
-"vám predstavil. Som Darken Volk. Pokiaľ viem, vaše kráľovstvo nemá v láske "
-"môj rod, ale myslím že je dôležité aby sme na naše rozdiely na chvíľu "
+"Chvíľu potom vyšiel z lesa muž v rúchu černokňažníka. <i>„Dovoľte mi aby som "
+"sa vám predstavil. Som Darken Volk. Pokiaľ viem, vaše kráľovstvo nemá v "
+"láske môj rod, ale myslím, že je dôležité aby sme na naše rozdiely na chvíľu "
 "zabudli. Hrozba orkov na severe narastá a pochybujem, že nejaké pohraničné "
 "mesto dokáže obstáť bez nejakej pomoci. Teraz váš žiadam iba aby som si "
-"mohol vo vašom meste niekoľko dní odpočinúť.“"
+"mohol vo vašom meste niekoľko dní odpočinúť.“</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:54
-#, fuzzy
 msgid ""
 "Drogan, the captain of the guard, replied, <i>“Surely you know that the "
 "penalty for necromancy is death. For your aid we will promise you rest and "
@@ -180,10 +177,11 @@ msgid ""
 "to return on pain of death. We thank you for your help, but need no "
 "alliances with those who deal only in dark magic.”</i>"
 msgstr ""
-"Drogan, kapitán stráží odpovedal, „Iste viete, že trestom za černokňažníctvo "
-"je smrť. Za vašu pomoc vám ale sľubujeme odpočinok a bezpečnosť. Po vašom "
-"odjazde však budete vyhostený z týchto krajov pod hrozbou smrti. Ďakujeme "
-"vám za vašu pomoc, ale nebudeme sa spájať s tými čo používajú temnú mágiu.“"
+"Drogan, kapitán stráží odpovedal, <i>„Iste viete, že trestom za "
+"černokňažníctvo je smrť. Za vašu pomoc vám ale sľubujeme odpočinok a "
+"bezpečnosť. Po vašom odjazde však budete vyhostený z týchto krajov pod "
+"hrozbou smrti. Ďakujeme vám za vašu pomoc, ale nebudeme sa spájať s tými čo "
+"používajú temnú mágiu.”</i>"
 
 #. [side]: type=Frontier Baroness, id=Dela Keshar
 #. [side]: type=General, id=Taylor
@@ -279,14 +277,13 @@ msgstr "Zomrie Drogan"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:186
-#, fuzzy
 msgid ""
 "Malin, troubled by his father’s death, argues to no avail that Darken Volk "
 "be allowed to stay to help defend the town. The necromancer leaves Parthyn "
 "without incident."
 msgstr ""
-"Aj Malin, zarmútený otcovou smrťou, odmietal pomoc Darkena Volka pri ochrane "
-"mesta. Černokňažník tak Parthyn opustil."
+"Aj Malin, zarmútený otcovou smrťou, argumentoval zbytočne, aby Darken Volk "
+"mohol zostať na obranu mesta. Černokňažník tak Parthyn opustil."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:191
@@ -350,7 +347,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:230
-#, fuzzy
 msgid ""
 "No! No... it was nothing like that... But I will not stand by and allow the "
 "orcs to destroy my home while I have the skills to prevent it!"
@@ -450,14 +446,13 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:350
-#, fuzzy
 msgid ""
 "Perhaps I cannot kill them all... but I see the back-trail of this band we "
 "defeated, and there will be more orcs at the other end of it. I shall pursue "
 "them."
 msgstr ""
-"Možno ich nemôžem zabiť všetkých... ale vidím stopy skupiny ktorú sme "
-"porazili a na ich konci budú ďalší. Budem ich sledovať."
+"Možno ich nemôžem zabiť všetkých... ale vidím stopy skupiny, ktorú sme "
+"porazili, a na ich konci budú ďalší orkovia. Budem ich sledovať."
 
 #. [message]: speaker=Drogan
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:354
@@ -485,7 +480,6 @@ msgstr "Už som sa rozhodol."
 
 #. [message]: speaker=Drogan
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:370
-#, fuzzy
 msgid ""
 "You’ll go without my blessing or my men, then. I won’t spare any on such an "
 "errand."
@@ -698,7 +692,6 @@ msgstr "Predpokladám, že áno..."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:367
-#, fuzzy
 msgid ""
 "Sacking goblin villages is all well and good, but walking corpses and bats "
 "won’t stand up to full orcish warriors."
@@ -807,7 +800,6 @@ msgstr ""
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:208
-#, fuzzy
 msgid ""
 "Two necromancers are at the cave entrance! Up yer axes, boys, if ye dinna’ "
 "want tae be a walking pile o’ bones."
@@ -864,9 +856,8 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:257
-#, fuzzy
 msgid "But why are they attacking me? And what should I do?!"
-msgstr "Ale prečo na mňa útočia? Čo môžem urobiť?!?"
+msgstr "Ale prečo na mňa útočia? Čo môžem urobiť?!"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:261
@@ -1006,7 +997,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:28
-#, fuzzy
 msgid ""
 "Word spreads to the south as well, of the many battles won against the orc "
 "tribes, as Darken Volk tells Malin. As spring rolls around, a number of dark "
@@ -1015,10 +1005,10 @@ msgid ""
 "<i>“but none of them have even a tenth of your potential power.”</i>"
 msgstr ""
 "Taktiež na juh sa dostali zvesti o fantastických úspechoch Darken Volka a "
-"Malina. Množstvo temných adeptov, ochotných pomôcť v boji proti orkom novo "
-"objavenou a mocnou temnou mágiou, prišlo na sever a pridali sa ku dvojici. "
-"\"Pomôžu v boji, sú cennou pomocou,\" povedal černokňažník Malinovi, \"ale "
-"nikto z nich nemá ani desatinu tvojho skutočného potenciálu\"."
+"Malina proti orkom. Ako prišla jar, množstvo temných adeptov, ochotných "
+"pomôcť v boji, prišlo na sever a pridali sa k tejto dvojici. <i>„Pomôžu v "
+"boji, sú cennou pomocou”</i>, povedal černokňažník Malinovi, <i>„ale nikto z "
+"nich nemá ani desatinu tvojho skutočného potenciálu”</i>."
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:33
@@ -1320,7 +1310,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:347
-#, fuzzy
 msgid ""
 "Gods of Darkness, how did it come to this? My own sister determined on my "
 "death. Nothing has gone right since... since that day the fat toad Zephrin "
@@ -1329,7 +1318,10 @@ msgid ""
 "they said, and expelled me from the Academy."
 msgstr ""
 "Bohovia temnoty, ako si na to prišla? Moja vlastná sestra ma odsúdila na "
-"smrť. Nič sa nedarí, odkedy... odkedy ma vyhodili z akadémie."
+"smrť. Nič sa nedarí, odkedy... odkedy si ten tučniak Zefrin robil posmech z "
+"môjho vidieckeho prízvuku a ja som stratil nervy a preklial ho. <i>"
+"„Doživotné prekliatie presahuje vtip.”</i>, povedali mi. <i>„Zlý úsudok”</"
+"i>, skonštatovali a vyhodili ma z akadémie."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:351
@@ -1363,7 +1355,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:111
-#, fuzzy
 msgid ""
 "<i>“For your final test as my apprentice, you will aid me in retrieving a "
 "book,”</i> the necromancer says. <i>“The book was... stolen from me long "
@@ -1371,24 +1362,22 @@ msgid ""
 "I should warn you that it will require you to act against your countrymen of "
 "Wesnoth, since it was one of them who stole it from me.”</i>"
 msgstr ""
-"'Posledná úloha v role učňa bude pomôcť mi získať knihu.' povedal "
-"černokňažník. 'Kniha bola... ukradli mi ju. Už dávno. Má pre mňa veľkú "
+"<i>„Posledná úloha v role učňa bude pomôcť mi získať knihu.”</i>, povedal "
+"černokňažník. <i>„Kniha bola... ukradli mi ju. Už dávno. Má pre mňa veľkú "
 "hodnotu, ber to ako malú láskavosť. Musím ťa ale upozorniť, je to úloha, v "
-"ktorej ide o konflikt s ľuďmi z Wesnothu, ktorí ma o ňu pripravili.'"
+"ktorej ide o konflikt s ľuďmi z Wesnothu, ktorí ma o ňu pripravili.”</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:116
-#, fuzzy
 msgid ""
 "Malin replies, <i>“They are no longer countrymen of mine, since they have "
 "rejected me twice now.”</i>"
 msgstr ""
-"Malin odpovedal, \"Už to nie sú moji krajania. Už dvakrát ma bezdôvodne "
-"vyhnali.\""
+"Malin odpovedal, <i>„Už to nie sú moji krajania. Už dvakrát ma bezdôvodne "
+"vyhnali.”</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:121
-#, fuzzy
 msgid ""
 "Darken Volk continues, <i>“Excellent. We travel, then, to the city of Tath. "
 "There is a lord of that city by the name of Karres. He was trained as a mage "
@@ -1396,10 +1385,10 @@ msgid ""
 "their studies. Among his library is the book we seek. We will need to break "
 "into his manor and seek the book inside.”</i>"
 msgstr ""
-"Darken Volk pokračoval: \"Výborne. Ideme teda do mesta Tath. Nachádza sa tam "
-"Karres, pán mesta. Bol trénovaný ako mág v mladosti, a teraz trénuje "
+"Darken Volk pokračoval: <i>„Výborne. Ideme teda do mesta Tath. Nachádza sa "
+"tam Karres, pán mesta. Bol trénovaný ako mág v mladosti, a teraz trénuje "
 "množstvo mladých mágov. V jeho knižnici je kniha, ktorú hľadáme. Budeme sa "
-"musieť dostať do jeho vily a nájsť ju niekde v nej."
+"musieť dostať do jeho vily a nájsť ju niekde v nej.”</i>"
 
 #. [side]: type=Apprentice Mage, id=Malin Keshar
 #. [side]
@@ -1554,7 +1543,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:363
-#, fuzzy
 msgid ""
 "That gate won’t hold back the soldiers for more than a few hours. We’d "
 "better hurry."
@@ -1715,9 +1703,8 @@ msgstr ""
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:228
-#, fuzzy
 msgid "‘We’? <i>We</i> do nothing. You are no longer my apprentice."
-msgstr "My? MY nič, už nie si môj učeň."
+msgstr "„My”? <i>MY</i> nič, už nie si môj učeň."
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:242
@@ -1936,13 +1923,12 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:18
-#, fuzzy
 msgid "<i>“To become a lich, one must first die.”</i>"
-msgstr "'Kým kostej príde na smrť, niekto musí umrieť.'"
+msgstr ""
+"<i>„Je potrebné najprv zomrieť, až potom je možné sa stať kostejom.”</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:23
-#, fuzzy
 msgid ""
 "So reads the book that Malin has reclaimed. <i>“The spells of necromancy "
 "bind the spirit, but only once it has been unbound from the body. To become "
@@ -1951,12 +1937,12 @@ msgid ""
 "the spirits of others. Because he retains his own will, however, the lich "
 "can call upon the awesome powers of the spirit world.”</i>"
 msgstr ""
-"A tak začal čítať knihu, ktorú získal: 'Kúzla temnej mágie dokážu uvoľniť "
+"A tak začal čítať knihu, ktorú získal: <i>„Kúzla temnej mágie dokážu uvoľniť "
 "dušu od tela. Kto sa chce stať kostejom, musí preniesť zaklínadlá s "
 "posledným dychom. Tak ako dokáže černokňažník ovládnuť svoju dušu, môže "
 "ovládať aj duše ostatných. Samotný černokňažník však dokáže používať svojho "
 "ducha naplno, istým spôsobom ostáva sám sebou, čo mu umožňuje využívať "
-"obrovský magický potenciál.'"
+"obrovský magický potenciál.”</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:28
@@ -2091,7 +2077,7 @@ msgstr "Mal Keshar"
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:417
 msgid "<big>AAAaaiiigghh!!</big>"
-msgstr ""
+msgstr "<big>AAAaaiiigghh!!</big>"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:422
@@ -2160,7 +2146,7 @@ msgstr ""
 #. [message]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:677
 msgid "<big>AAAaaaggghhhh!! ...</big>"
-msgstr ""
+msgstr "<big>AAAaaaggghhhh!! ...</big>"
 
 #. [scenario]: id=12_Endless_Night
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:6
@@ -2258,13 +2244,12 @@ msgstr ""
 
 #. [message]: speaker=Foolish Hero
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:328
-#, fuzzy
 msgid ""
 "I’ve been itching for a chance to break some bones with my hammer, and now "
 "you’ve given me cause. Goodness knows you’ve got plenty of bones over there."
 msgstr ""
 "Modlil som sa k bohom za možnosť rozbiť staré kosti, rozdrviť ich na prach "
-"kladivom. A teraz je tá šanca tu. Uvidíme, ako sa Ti to bude páčiť."
+"kladivom. A teraz je tá šanca tu. Máte tam pekne veľa kostí."
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:332
