--- a/po/wesnoth-utbs/sk.po
+++ b/po/wesnoth-utbs/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-06-27 20:46+0100\n"
+"PO-Revision-Date: 2012-08-15 20:18+0100\n"
 "Last-Translator: Martin Dzbor <mdzbor@yahoo.co.uk>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -3344,10 +3344,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:878
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take this ring?"
-msgstr "Mám si vziať ten meč?"
+msgstr "Mám si vziať ten prsteň?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:880
@@ -3368,10 +3366,8 @@ msgstr "Tento prsteň zvýši tvoju maximálnu rýchlosť o 1 bod."
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:913
-#, fuzzy
-#| msgid "No, I think someone else should wield it."
 msgid "No, I think someone else should wear it."
-msgstr "Nie, myslím, že by ho mal dostať niekto iný."
+msgstr "Nie, myslím, že by ho mal niesť niekto iný."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:947
